# KeloCAM

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
crates/kelocam/: Cargo.toml
crates/kelocam-core/: Cargo.toml  README.md
crates/kelocam-core/benches/: ray_intersection.rs
crates/kelocam-core/src/: axis.rs  geometry.rs  lib.rs  line.rs  mesh.rs  path.rs  plane.rs  ray.rs  sphere.rs  square.rs  triangle.rs
crates/kelocam-core/src/cnc/: bit.rs  mod.rs
crates/kelocam-core/src/primitives/: geometry.rs  line.rs  mesh.rs  path.rs  plane.rs  ray.rs  sphere.rs  square.rs  triangle.rs
crates/kelocam-editor/: Cargo.toml  README.md
crates/kelocam-editor/src/: camera.rs  lib.rs  log.rs  object.rs  tool.rs
crates/kelocam-editor/src/renderer/: entity.rs  object.rs  path.rs
crates/kelocam-editor/src/renderer/shaders/: grid.wgsl  path.wgsl
crates/kelocam-postprocessor/: Cargo.toml
crates/kelocam/src/: app.rs  lib.rs
crates/kelocam/src/view/: mod.rs  prepare.rs
src/: app.rs  lib.rs  main.rs
src/core/: line.rs  machine.rs  mesh.rs  mod.rs  path.rs  plane.rs  ray.rs  sdf.rs  sphere.rs  square.rs  tool.rs  triangle.rs
src/core/primitives/: axis.rs  mesh.rs  mod.rs  path.rs  plane.rs  square.rs  trans.rs  triangle.rs
src/device/: mod.rs
src/device/endpoint/: mod.rs  serial.rs
src/editor/: arrow.rs  camera.rs  grid.rs  group.rs  icons.rs  log.rs  mod.rs  object.rs  path.rs  ray.rs  sidebar.rs  state.rs  tool.rs  toolpath.rs
src/editor/shaders/: arrow.wgsl  grid.wgsl  object.wgsl  path.wgsl  tool.wgsl  toolpath.wgsl
src/loader/: dxf.rs  mod.rs
src/object/: contour.rs  mod.rs  point.rs
src/renderer/: entity.rs  grid.rs  mod.rs  object.rs  path.rs
src/renderer/shaders/: entity.wgsl  object.wgsl  path.wgsl
src/view/: mod.rs  monitor.rs  prepare.rs
src/widget/viewer/: camera.rs  mod.rs
src/widget/viewer/shaders/: grid.wgsl  object.wgsl
tests/: kok.rs  object_contour.rs  object_point.rs
