[package]
name = "kelocam"
version = "0.1.0"
authors = ["Lucas Birkert <kekontheworld@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
] }
serialport = "4.2.0"
stl = "0.2.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
tracing-subscriber = "0.3"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
rfd = "0.11.4"
futures = "0.3.28"
pollster = "0.3.0"
byteorder = "1.4.3"
image = "0.24.6"

kelocam-core = { path = "../kelocam-core/" }
kelocam-editor = { path = "../kelocam-editor/" }
